# thesis

./: .ObjectDetection.cpp.swp  .OpenNI2SkeletonData.cpp.swp  .OpencvCamera.cpp.swp  .OpencvGrabber.cpp.swp  CMakeCache.txt  CMakeLists.txt  CollisionDetectionThread.cpp  CollisionDetectionThread.h  FindLocation.cpp  LookAtLocation.cpp  MultiModalModule.cpp  MultiModalModule.h  MultiModalThread.cpp  MultiModalThread.h  ObjectDetection.cpp  ObjectDetectionThread.cpp  ObjectDetectionThread.h  OpenNI2SkeletonData.cpp  OpenNI2SkeletonData.h  OpenNI2SkeletonTracker.cpp  OpenNI2SkeletonTracker.h  OpencvCamera.cpp  OpencvGrabber.cpp  README.md  Thread.cpp  device_detector.cpp  iCub_parts_activation.ini  main.cpp
